ctrek/Game/bkp/build.log
cTrekGame.cpp:550:25: error: use of undeclared identifier 'SCAN_PLAYER_RANGE'
  if (playerScanning == SCAN_PLAYER_RANGE) {
                        ^
cTrekGame.cpp:578:25: error: use of undeclared identifier 'SCAN_ENEMY_RANGE'
  if (playerScanning == SCAN_ENEMY_RANGE) {
                        ^
cTrekGame.cpp:627:21: error: use of undeclared identifier 'SCAN_PLAYER_RANGE'
  if (scanTarget == SCAN_PLAYER_RANGE) {
                    ^
cTrekGame.cpp:642:21: error: use of undeclared identifier 'SCAN_PLAYER_RANGE'
  if (scanTarget == SCAN_PLAYER_RANGE) {
                    ^
cTrekGame.cpp:686:20: error: expected expression
      if (scans == ) {
                   ^
cTrekGame.cpp:689:32: error: use of undeclared identifier 'SCAN_TYPE_RANGE'
      HS_DEPLETION = (scans == SCAN_TYPE_RANGE) ?
                               ^
cTrekGame.cpp:709:16: error: use of undeclared identifier 'SCAN_TYPE_DEPLETION'
  if (scans == SCAN_TYPE_DEPLETION) {
               ^
cTrekGame.cpp:713:27: error: use of undeclared identifier 'SCAN_TYPE_DEPLETION'
  HS_IN_RANGE = (scans == SCAN_TYPE_DEPLETION) ? (ranges[2] != 0) ? 7 :
                          ^
cTrekGame.cpp:716:21: error: use of undeclared identifier 'SCAN_PLAYER_RANGE'
  if (scanTarget == SCAN_PLAYER_RANGE) {
                    ^
9 errors generated.
